@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0


class Test {
  -idTest
  -nhsCode
  -clientCitizenCardNumber
}

class TestType {
  -code
  -description
  -collectingMethod
}

class Company {
  -designation
  -authFacade
  -testType
}

class ClinicalAnalysisLaboratory {
  -idLaboratory
  -name
  -address
  -phoneNumber
  -tin
  -testType
}


class Administrator {
    -idEmployee
    -organizationRole
    -name
    -adress
    -email
    -phoneNumber
    -socn
}

class TestParameters {
  -idTest
  -idParameters

}



Test "*" -- "1" TestType: owns >
Test "1" -- "*" TestParameters: owns >
Administrator "1" -- "*" TestType: Creates >
Company "*" -- "1" TestType: owns >
ClinicalAnalysisLaboratory "*" -- "1" TestType: conducts >




@enduml